# Archangel

./: .env.example  .gitignore  ARCHANGEL.md  README.md  features.md  pyproject.toml
archangel/: __init__.py
archangel/agents/: __init__.py  chat.py  groupchat.py  monitor.py  scraper.py
archangel/analysis/: __init__.py
archangel/analytics/: __init__.py  engine.py
archangel/cli/: __init__.py  banner.py  commands.py  main.py
archangel/collectors/: __init__.py
archangel/config/: __init__.py  manager.py
archangel/engine/: __init__.py  runtime.py
archangel/enrichment/: __init__.py  agent.py  engine.py
archangel/events/: __init__.py
archangel/export/: __init__.py
archangel/lifecycle/: __init__.py  agent.py  engine.py
archangel/memory/: __init__.py  profile.py
archangel/models/: __init__.py
archangel/notifications/: __init__.py  batching.py
archangel/outreach/: __init__.py  agent.py  engine.py
archangel/plugins/: __init__.py
archangel/registry/: __init__.py
archangel/revenue/: __init__.py  tracker.py
configs/: analysis.yaml  config.yaml  keywords.yaml  notifications.yaml  scoring.yaml  sources.yaml  storage.yaml  you.txt
docs/: 00-Vision.md  01-Architecture.md  02-Agents.md  03-CLI.md  04-Repository.md  05-Pipeline.md  06-Plugin-System.md  07-Configuration.md  08-Roadmap.md  09-Implementation.md
scripts/: register-path.ps1
tests/: demo_run.py  test_analytics.py  test_batching.py  test_enrichment.py  test_groupchat.py  test_lifecycle.py  test_outreach.py  test_predictive_scoring.py  test_profile_memory.py  test_revenue.py  test_vault.py
(+38 files in other folders)
