[project]
name = "archangel"
version = "0.1.0"
description = "Autonomous AI-powered lead intelligence platform"
authors = [
    { name = "Daksh Thanki" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "ddgs>=7.0.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "python-telegram-bot>=21.0",
]

[project.scripts]
archangel = "archangel.cli.main:main"
aa = "archangel.cli.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["archangel", "archangel.*"]

[tool.setuptools.package-data]
"archangel" = ["py.typed"]
